--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Please refer to the manual in the doc directory for further information.
+Please refer to the online manual for details about installing and
+using Octopus:
+
+http://www.tddft.org/programs/octopus/wiki/index.php/Manual
+
+Please note that the documentation under the doc directory is
+currently outdated.
