* Changed the files to build a Debian package in 2.1.x, now the the octopus deb can be built on a clean debian etch (or ubuntu) system using gfortran.
* I had to disable the parallel binary, because the mpich available in
Debian is still compiled with g77 and there are some problems
compiling octopus with openmpi. 

* I moved the old debian/rules file to debian/rules.other_compilers .

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+octopus (2.1.0rc2-1) unstable; urgency=low
+
+  * Second release candidate for octopus 2.1.0
+
+  * Changed the rules file, now the package will be build with
+  gfortran 4.1. Only serial version for the moment.
+
+ -- Xavier Andrade <xavier@tddft.org>  Fri, 23 Mar 2007 11:33:26 +0100
+
 octopus (2.1.0rc1-1) unstable; urgency=low
 
   * First release candidate for octopus 2.1.0.
