--- a/README
+++ b/README
@@ -6,4 +6,4 @@ using Octopus:
 
 http://www.tddft.org/programs/octopus/wiki/index.php/Manual
 
-(There is an offline copy available at <sharedir>/doc/octopus/octopus.pdf)
+(There is an offline copy available at <sharedir>/octopus/doc/octopus.pdf)
